map fixed on mobile

--- a/web/landing/css/style.css
+++ b/web/landing/css/style.css
@@ -708,6 +708,7 @@ ul.underlinemenu li a.selected, ul.underlinemenu li a:hover {
 	}
 	#map {
 		background-size: auto 100%;
+        background-position: center 50px;
 	}
 	.mapInteractive {
 		width: 300px;
